# my-Chatroom

./: CMakeLists.txt  README.md  main.cpp  redis.md  知识复习.md
LogOn/: logFunc.h  logOn.h
base/: MegType.cc  MegType.h  MessageSplitter.h  handleData.h  logOn.h  threadPool.h  tool.cc  tool.h  user.h  verCode.h
baseFunc/: logOn.h  user.h  verCode.h
chatServer/: server.cc
client/: 1.h  CMakeLists.txt  MessageManager.cc  MessageManager.h  TermiosGuard.h  UserUi.cc  UserUi.h  client.cc  handleMeg.h  sendFile.cc  sendFile.h
ftp/: CMakeLists.txt  handleFile.cc  handleFile.h  server.cc
netlib/: CMakeLists.txt
netlib/base/: logStream.h  logger.cc  logger.h
netlib/net/: Epoller.cc  TcpClient.cc  TcpConnection.cc  TcpConnection.h
server/: CMakeLists.txt  ConnectionManager.cc  ConnectionManager.h  handleData.cc  handleData.h  redisCmd.cc  redisCmd.h  server.cc
